manifests/base/gateway/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gateway
  namespace: deploy-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`procla.dev`)
      kind: Rule
      services:
        - name: gateway
          port: 8080
